# Toilet-whisper

./: README.md  Rainmaker-Specs.md  Test_Fan_PWN.ino  Test_Humidity-Temp_AHTX0.ino  Test_I2C_Scanner.ino  Test_Light-Sensor_VEML7700.ino
Arduino-Connection-Test/: README.md
CAD-Files/: README.md
Connection-Test/: README.md  Test_Air-Quality_ENS160.ino
ESP-IDF/: CMakeLists.txt  README.MD  partitions.csv  sdkconfig.defaults
ESP-IDF (RAINMAKER)/: README.md
ESP-IDF/main/: CMakeLists.txt  air_quality.c  air_quality.h  app_main.h  ble_presence.c  ble_presence.h  config.h  data_logger.c  data_logger.h  decision_engine.c  decision_engine.h  fan_control.c  fan_control.h  i2c_manager.c  i2c_manager.h  main.c  rainmaker_app.c  rainmaker_app.h  veml7700.c  veml7700.h
SCHEMATICS & PCB/: README.md  TOILET WHISPER.f3z
